--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.11",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.5"
+    "react-router-dom": "^7.9.5",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
